--- a/templates/login.html
+++ b/templates/login.html
@@ -302,10 +302,6 @@
                             <input type="password" id="password" placeholder="Enter your password" required>
                         </div>
                         <div class="form-options">
-                            <div class="remember-me">
-                                <input type="checkbox" id="remember">
-                                <label for="remember">Remember me</label>
-                            </div>
                             <a href="forgot-password.html" class="forgot-password">Forgot password?</a>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Sign In</button>
@@ -321,13 +317,13 @@
                             Sign in with Google
                         </button>
                         <button class="btn-social">
-                            <img src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" alt="Facebook">
-                            Sign in with Facebook
+                            <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub" style="width: 20px; height: 20px; margin-right: 8px;">
+                            Sign in with GitHub
                         </button>
                     </div>
                     
                     <div class="auth-footer">
-                        <p>Don't have an account? <a href="register.html">Sign up</a></p>
+                        <p>Don't have an account? <a href="register">Sign up</a></p>
                     </div>
                 </div>
             </div>
