--- a/templates/profile_settings.html
+++ b/templates/profile_settings.html
@@ -356,9 +356,12 @@
 
         </div>
         <div class="my-6 text-center">
-  <button class="btn-outline full-width-btn">
+  <form action="/logout" method="get">
+  <button type="submit" class="btn-outline full-width-btn">
     <span class="icon-placeholder"><i class="fas fa-sign-out-alt"></i></span> Logout
   </button>
+</form>
+
 </div>
       </div>
     </div>
