--- a/templates/forgetpassword.html
+++ b/templates/forgetpassword.html
@@ -278,7 +278,7 @@
 {% endif %}
 
                     <div class="auth-footer">
-                        <p>Remember your password? <a href="login.html">Back to login</a></p>
+                        <p>Remember your password? <a href="/login">Back to login</a></p>
                     </div>
                 </div>
             </div>
