--- a/templates/verification.html
+++ b/templates/verification.html
@@ -333,7 +333,7 @@
 {% endif %}
 
                     <div class="auth-footer">
-                        <p><a href="login.html">Back to login</a></p>
+                        <p><a href="/login">Back to login</a></p>
                     </div>
                 </div>
             </div>
